--- a/Landing_Pages/css/style.css
+++ b/Landing_Pages/css/style.css
@@ -130,7 +130,7 @@ p{
     color: white;
     font-family: 'Courier New', Courier, monospace;
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 55px;
     font-weight: 600;
 }
 .conteudo-sobre h3{
@@ -188,15 +188,16 @@ p{
     font-weight: 500;
 }
 .texto-endereco{
-    color: #a259f7;
+    color: #7e19d1;
     font-family: 'Courier New', Courier, monospace;
-    background-color:#010010 ;
-    border: solid 2px #a259f7;
+    background-color:#000000 ;
+    border: solid 2px #7811d8;
     padding: 55px 55px;
 }
 .texto-endereco p{
     width: 400px;
-    font-size: 20px;
+    font-size: 30px;
+    color: #7811d8;
 }
 .container-mapa{
     position: relative;
@@ -215,10 +216,31 @@ p{
     width: 100%;
     height: 100%;
 }
+.container-video{
+    position: relative;
+    overflow: hidden;
+    width:100%;
+    padding-top:10px ;
+}
+.video-responsivo{
+    position: absolute;
+    margin-top: 10px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right:0;
+    width: 100%;
+    height: 100%;
+}
+
 footer{
     height: 80px;
-    background-color:#F9003D;
-    color: white;
+    background-color:#000000;
+    color: rgb(0, 0, 0);
     display: flex;
     top: 0px;
+}
+.ft{
+    margin-left: 800px;
+    margin-top: 30px;
 }
