--- a/Landing_Pages/css/style.css
+++ b/Landing_Pages/css/style.css
@@ -12,6 +12,7 @@ body{
     width: 85%;
 }
 header{
+    z-index: 1;
     background-color: crimson;
     height: 80px;
     position: fixed;
@@ -176,6 +177,7 @@ p{
 }
 .endereco{
     padding: 40px 0;
+    background-color: #080324;
 }
 .conteudo-endereco{
     margin: 0 auto;
@@ -208,7 +210,7 @@ p{
 
 .mapa-responsivo{
     position: absolute;
-    margin-top: 10px;
+    margin-top: 20px;
     top: 0;
     left: 0;
     bottom: 0;
@@ -220,11 +222,11 @@ p{
     position: relative;
     overflow: hidden;
     width:100%;
-    padding-top:10px ;
+    padding-top: 20% ;
 }
 .video-responsivo{
     position: absolute;
-    margin-top: 10px;
+    margin-top: 20px;
     top: 0;
     left: 0;
     bottom: 0;
@@ -235,8 +237,8 @@ p{
 
 footer{
     height: 80px;
-    background-color:#000000;
-    color: rgb(0, 0, 0);
+    background-color:#ff0000;
+    color: rgb(255, 255, 255);
     display: flex;
     top: 0px;
 }
