--- a/Landing_Pages/css/layout_smartphone.css
+++ b/Landing_Pages/css/layout_smartphone.css
@@ -1,41 +1,50 @@
-.menu-header{
-    display: none;
-    flex-direction: column;
-    justify-content: space-around;
-    background-color: black;
-    position: absolute;
-    top: 80px;
-    left: 0px;
-    height: 300px;
-    width:100%;
-}
-.menu-barras{
-    display: inline;
-}
-#icone-menu{
-    color: white;
-    font-size: 30px;
-}
-.banner{
-    background-image: url(../img/imagem-fundo-ranking.jpg);
-}
-.imagem-sobre{
-    width: 100%;
-}
-.texto-sobre{
-    width: 100%;
-    height: unset;
-}
-.container-mapa{
-    width: 100%;
-    margin-top: 30px;
-}
-.container-video{
-    width: 100%;
-    margin-top: 30px;
-}
-@media screen and (max-width:360px) {
+
+@media screen and (max-width:768px) {
     .titulo-senai{
         font-size: 42px;
     }
+    .menu-header{
+        display: none;
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: black;
+        position: absolute;
+        top: 80px;
+        left: 0px;
+        height: 300px;
+        width:100%;
+    }
+    .menu-barras{
+        display: inline;
+    }
+    #icone-menu{
+        color: white;
+        font-size: 30px;
+    }
+    .banner{
+        background-image: url(../img/imagem-fundo-ranking.jpg);
+    }
+    .imagem-sobre{
+        width: 100%;
+    }
+    .texto-sobre{
+        width: 100%;
+        height: unset;
+    }
+    .conteudo-info{
+        flex-direction: column;
+    }
+    .conteudo-sobre{
+        flex-direction: column;
+        align-items: center;
+    }
+    .container-mapa{
+        width: 100%;
+        margin-top: 30px;
+    }
+    .container-video{
+        width: 100%;
+        margin-top: 30px;
+    }
 }
+
